@@ -3,7 +3,7 @@ set -e
 
 case "$1" in
   configure)
-    if dpkg --compare-versions "$2" lt-nl 1.99-1; then
+    if dpkg --compare-versions "$2" lt-nl 1.99-23; then
       # Force dpkg to replace this directory with a symlink.
       if [ ! -L /usr/share/doc/@PACKAGE@ ] && [ -d /usr/share/doc/@PACKAGE@ ]; then
         if rmdir /usr/share/doc/@PACKAGE@ 2>/dev/null; then
